cluster-resources/nkp-wlc-a/neuvector.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    # traefik.ingress.kubernetes.io/router.middlewares: nkp-flux-provisioned-phvwv-jjxpb-stripprefixes@kubernetescrd,nkp-flux-provisioned-phvwv-jjxpb-forwardauth-full@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  generation: 1
  labels:
    app: neuvector
  name: neuvector
  namespace: neuvector
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: neuvector-service-webui
            port:
              number: 8443
        path: /dkp/neuvector
        pathType: Prefix
